add logging service to compose with hello world app

--- a/services/auth/views/login.hbs
+++ b/services/auth/views/login.hbs
@@ -21,7 +21,7 @@
     <label for="service">service</label>
     <select selected="" name="service" id="service" type="text">
         <option value="">select a service</option>
-        <option value="notebook">chat</option>
+        <option value="chat">chat</option>
         <option value="profile">manage profile</option>
     </select>
     <button type="submit">login</button>
