--- a/services/chat/views/home.hbs
+++ b/services/chat/views/home.hbs
@@ -49,7 +49,7 @@
 <script>
 
     $(function () {
-        var socket = io("?name={{firstName}}");
+        var socket = io("?name={{firstName}}&userId={{id}}");
         const form = document.querySelector('.form');
         form.addEventListener('submit', (e) => {
             e.preventDefault();
